--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,109 @@
 body {
-  position: relative;
   margin: 0;
 }
-.sect {
+.cabezote {
+  height: 100vh;
+  position: relative;
+}
+.top {
+  border-botton: lpx white;
+  box-shadow: 0 0 6px black;
+ /*background-color: rgba(0, 0, 0, 0.3); */
+}
+contenedor {
+  width:75%;
+  margin: auto;
+}
+.top .contenedor {
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.logo h1 {
+ color: white;
+ font-family: 'montserrat';
+ font-weight: 500;
+}
+.logo h1 span {
+   color: DarkSlateBlue;
+}
+.bmenu ul{
+  display: flex;
+  list-style-tipe: none;
+  margin: 0;
+  padding: 0;
+}
+.bmenu ul li:not(:last-child) {
+  margin-right: 30px;
+}
+ .bmenu ul li a {
+ color: white;
+font-family: "Montserrat", sans-serif;
+text-decoration: none:
+letter-spacing: lpx;
+}
+.bmenu ul li a:hover {
+ color: orange;
+ text-decoration: underline;
+}
+.caja-video video {
   width: 100%;
-  min-height: 500px;
-}
-#sect1,
-#sect3 {
-  background-color: #3333337d;
-  color: #fff;
-}
-#sect2 {
-  background-color: #dddddd7d;
-  color: #333;
-}
-
-video {
-  position: fixed;
+  height: 100vh;
+  object-fit: cover;
+  position: absolute;
+ position: fixed;
+top: 0;
   right: 0;
   bottom: 0;
-  min-width: 105%;
-  min-height: 100%;
-  transform: translateX(calc((100% - 100vw) / 2));
-  z-index: -2;
+  left: 0;
+  z-index: -1;
 }
-h1 {
-  margin: 0;
-  padding-top: 3rem;
-  padding-left: 2rem;
+.caja-info {
+ color: white;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ height: 100vh;
+ position: absolute;
+ top: 0;
+  right: 0;
+  botton: 0;
+  left: 0;
+ z-index: -1;
 }
-h2 {
-  margin: 0;
-  padding-top: 3rem;
-  padding-left: 2rem;
+.caja-info h2, .caja-info h3 {
+  margin: 0 0 20px;
+  font-family: "Montserrat", sans-serif;
+}
+.caja-info h2 {
+font-size: 80px;
+text-transform: uppercase;
+}
+.caja-info h3 {
+font.size: 40px;
+font-weight: 300;
+word-spacing: 8px;
+letter-spacing: 1px;
+}
+.info {
+background-color: wheat;
+height: 100vh;
+}
+@media screen and (max-width: 767px) {
+  .contenedor (
+  width:95%;
+ )
+ video (
+display: none;
+)
+.caja-info h2 (
+  font size: 48px;
+  margin-bottom: 8px;
+)
+.caja-info h3(
+font-size: 20px;
+word-spacing: 4px;
+ letter-spacing: .15rem;
+ )
 }
