--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,21 @@ letter-spacing: 1px;
 background-color: wheat;
 height: 100vh;
 }
+.titulo {
+    font-size: 40px;
+    font-family: 'Dancing Script', cursive;
+    margin-bottom: 40px;
+    color: #fff;
+}
+
+.subtitulo {
+    margin: 0;
+    color: #000;
+    display: inline;
+    font-size: 50px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
 @media screen and (max-width: 767px) {
   .contenedor (
   width:95%;
