--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ height: 100vh;
     font-family: 'Dancing Script', cursive;
     margin-bottom: 40px;
     color: #fff;
+  z-index: 1;
 }
 
 .subtitulo {
