--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   position: relative;
 }
 .top {
+  position: absolute;
+ position: fixed;
   border-botton: lpx white;
   box-shadow: 0 0 6px black;
  /*background-color: rgba(0, 0, 0, 0.3); */
@@ -75,7 +77,7 @@ top: 0;
   right: 0;
   botton: 100;
   left: 0;
- z-index: -2;
+ z-index: -6;
 }
 .caja-info h2, .caja-info h3 {
   margin: 0 0 20px;
