--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ height: 100vh;
     font-family: 'Dancing Script', cursive;
     margin-bottom: 40px;
     color: #fff;
-  
+  z-index: -6;
 }
 
 .subtitulo {
@@ -112,6 +112,7 @@ height: 100vh;
     font-size: 50px;
     font-weight: 500;
     text-transform: uppercase;
+  z-index: -6;
 }
 @media screen and (max-width: 767px) {
   .contenedor (
