--- a/assets/css/joystick.css
+++ b/assets/css/joystick.css
@@ -10,7 +10,7 @@
     border-radius: 50%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     opacity: 0.75;
-    background-image: url(".assets/images/joystick.png");
+    background-color: rgba(224, 224, 224, 0.8);
     z-index: 200;
 }
 
